# utils

./: .clang-format  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  appveyor.yml  clang-cmake-bash.sh  clang-cmake-batch.bat  gcc-cmake-bash.sh  gcc-cmake-batch.bat  vs2017-cmake-batch.bat  xcode-cmake-bash.sh
lib/include/: bst.h  list.h  queue.h  stack.h
lib/src/: bst.cpp
proj/src/: main.cpp
test/include/: testOne.h
test/src/: list_copy_constructor_test.cpp  list_copy_operator_test.cpp  list_emplace_copy_test.cpp  list_emplace_move_test.cpp  list_insert_copy_test.cpp  list_insert_move_test.cpp  list_intialiser_constructor_test.cpp  list_move_constructor_test.cpp  list_move_operator_test.cpp  list_remove_test.cpp  stack_copy_constructor_test.cpp  stack_copy_operator_test.cpp  stack_emplace_push_copy_test.cpp  stack_emplace_push_move_test.cpp  stack_move_constructor_test.cpp  stack_move_operator_test.cpp  stack_pop_test.cpp  stack_push_test.cpp  stack_resize_test.cpp  testOne.cpp
